--- a/app/views/branded/layouts/application.html.erb
+++ b/app/views/branded/layouts/application.html.erb
@@ -91,6 +91,8 @@
         <div class='wave wave3'></div>
         <div class='wave wave4'></div>
       </header>
+      
+      <a id="content"></a>
 
       <!-- main page content rendering -->
       <% 
