--- a/app/assets/stylesheets/dmpopidor.scss
+++ b/app/assets/stylesheets/dmpopidor.scss
@@ -59,7 +59,7 @@ body div a.btn {
   justify-content: center;
 
   border-radius: 20px;
-  box-shadow: 0 0 15px $light-grey;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
   width: 84%;
   max-width: 1440px;
 
