CSS fixes to avoid conflicts with React CSS modules

--- a/app/views/branded/plans/_navigation.html.erb
+++ b/app/views/branded/plans/_navigation.html.erb
@@ -86,7 +86,7 @@
     </div>
   </div>
   <div id="content" role="tabpanel" class="tab-pane active">
-    <div class="panel panel-default">
+    <div class="plan-content panel panel-default">
       <div class="panel-body <%= write_plan_class %> ">
         <%= yield :plan_tab_body %>
       </div>
