Integrated latest general info changes : test plan, panel & css updates

--- a/app/views/branded/plans/_edit_details.html.erb
+++ b/app/views/branded/plans/_edit_details.html.erb
@@ -12,5 +12,5 @@
   "dmpId": <%= dmp_fragment.id %>,
   "projectFragmentId": <%= project_fragment.id %>,
   "metaFragmentId": <%= meta_fragment.id %>,
-  "isTestPlan": <%= @plan.is_test? %>
+  "isTest": <%= @plan.is_test? %>
 }'/>
